# mkpm-rs

./: Cargo.toml  Makefile  book.json  repo.json
src/: main.rs
src/commands/: clone.rs  mod.rs  read.rs
