[package]
name = "mkpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.25"
tokio = { version = "1.15.0", features = ["full"] }
serde = "1.0.133"
serde_derive = "1.0.133"
serde_json = "1.0.74"
open = "2.0.2"
structopt = "0.3.25"
reqwest = "0.11.9"